Heating - Improve early start (#3)
* Divorce heating and night light control

* Rework start checks to be periodic

* Syntax compliance

* Entity id change

* Another attempt for synta compliance

* Fix to entity type

* Adding logging to heating

* Change log level

* Change condition

* Change entity id

* Change polling time

* Change preheating trigger

* Rename preheating to early start

* Small experiment with the Map API

* Fixing service names and entity types

* Fixing wrong entity type

* Fix to entity type

* Don't bother starting the heating in the morning anymore as the pandemic is over!

* Fix to missing entity id

* Turn preheating off in the morning

* Remove vacuum config

--- a/integrations/input_boolean.yaml
+++ b/integrations/input_boolean.yaml
@@ -1,3 +1,11 @@
 heating:
   name: Heating
   icon: mdi:fire
+
+preheating:
+  name: Early start
+  icon: mdi:fire
+
+night_mode:
+  name: Night mode
+  icon: mdi:weather-night
