--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -22,13 +22,6 @@
   action:
     - service: script.heating_back
 
-- alias: Heating - Early morning
-  trigger:
-    platform: time
-    at: input_datetime.heating_on
-  action:
-    - service: script.heating_early_morning
-
 - alias: Heating - Morning
   trigger:
     platform: time
@@ -75,13 +68,38 @@
   action:
     - service: script.restart_tado
 
-- alias: Heating - Refresh Early Morning Timer
+- alias: Heating - Preheating On
+  trigger:
+    platform: time
+    at: "03:00:00"
+  condition:
+    - condition: state
+      entity_id: group.everyone
+      state: home
+  action:
+    - service: input_boolean.turn_on
+      entity_id: input_boolean.preheating
+
+- alias: Heating - Refresh Start Time
+  trigger:
+  - minutes: /5
+    platform: time_pattern
+  condition:
+    condition: state
+    entity_id: input_boolean.preheating
+    state: 'on'
+  action:
+    - service: script.refresh_early_morning_timer
+
+- alias: Heating - Periodic Check For Start
   trigger:
   - minutes: /1
     platform: time_pattern
   condition:
-    condition: state
-    entity_id: input_select.hassio_mode
-    state: 'night'
+    - condition: template
+      value_template: >
+        {% set time = states('input_datetime.heating_on')%}
+        {% set now = now().strftime("%H:%M:%S") %}
+        {{ now > time and is_state('input_boolean.preheating', 'on') }}
   action:
-    - service: script.refresh_early_morning_timer
+    - service: script.heating_early_morning
