--- a/integrations/xiaomi_cloud_map_extractor.yaml
+++ b/integrations/xiaomi_cloud_map_extractor.yaml
@@ -5,4 +5,6 @@
     password: !secret xiaomi_cloud_password
     draw: ['all']
     attributes:
-      - calibration_points    
+      - calibration_points
+    colors:
+      color_map_outside: [0, 0, 0, 0]
