--- a/integrations/xiaomi_cloud_map_extractor.yaml
+++ b/integrations/xiaomi_cloud_map_extractor.yaml
@@ -9,7 +9,7 @@
     colors:
       color_map_outside: [0, 0, 0, 0]
     map_transformation:
-      scale: 2
+      # scale: 2
       trim:
         left: 20
         right: 20
