--- a/integrations/xiaomi_cloud_map_extractor.yaml
+++ b/integrations/xiaomi_cloud_map_extractor.yaml
@@ -5,4 +5,12 @@
     password: !secret xiaomi_cloud_password
     draw: ['all']
     attributes:
-      - calibration_points    
+      - calibration_points
+    colors:
+      color_map_outside: [0, 0, 0, 0]
+    map_transformation:
+      trim:
+        left: 25
+        right: 20
+        top: 20
+        bottom: 25
