Hall light on if guests are over at night

--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -45,6 +45,12 @@ bedtime:
     - service: script.hallway_off
     - service: script.office_off
     - service: script.downstairs_off
+    - condition: state
+      entity_id: input_boolean.guest_mode
+      state: "on"
+    - service: script.night_light
+      data:
+        entity_id: light.upstairs_hall_light
 
 kids_bedtime:
   sequence:
