--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -82,14 +82,13 @@
       entity_id: sensor.bathroom_illumination
       below: 5
   action:
-    service: light.turn_on
-    data_template:
-      entity_id: light.bathroom_light
-      brightness_pct: >
-        {% if is_state("input_boolean.night_mode", "on") %}5
-        {% else %}100
+    service_template: >
+        {% if is_state("input_boolean.night_mode", "on") %} script.night_light
+        {% else %} script.bright_light
         {% endif %}
-
+    data:
+      entity_id: light.bathroom_light
+      
 - alias: Light - No motion in bathroom
   trigger:
     platform: state
