--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -77,10 +77,10 @@
     entity_id: binary_sensor.bathroom_motion
     from: 'off'
     to: 'on'
-  condition:
-    - condition: numeric_state
-      entity_id: sensor.bathroom_illumination
-      below: 5
+  # condition:
+  #   - condition: numeric_state
+  #     entity_id: sensor.bathroom_illumination
+  #     below: 5
   action:
     service_template: >
         {% if is_state("input_boolean.night_mode", "on") %} script.night_light
