--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -53,13 +53,12 @@
       entity_id: sensor.toilet_illumination
       below: 10
   action:
-    service: light.turn_on
-    data_template:
-      entity_id: light.toilet_light
-      brightness_pct: >
-        {% if is_state("input_boolean.night_mode", "on") %}5
-        {% else %}100
+    service_template: >
+        {% if is_state("input_boolean.night_mode", "on") %} script.night_light
+        {% else %} script.bright_light
         {% endif %}
+    data:
+      entity_id: light.bathroom_light
 
 - alias: Light - No motion in toilet
   trigger:
@@ -77,10 +76,10 @@
     entity_id: binary_sensor.bathroom_motion
     from: 'off'
     to: 'on'
-  # condition:
-  #   - condition: numeric_state
-  #     entity_id: sensor.bathroom_illumination
-  #     below: 5
+  condition:
+    - condition: numeric_state
+      entity_id: sensor.bathroom_illumination
+      below: 5
   action:
     service_template: >
         {% if is_state("input_boolean.night_mode", "on") %} script.night_light
