--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -33,8 +33,9 @@ morning:
         option: 'Český rozhlas Radiožurnál'
     - service: switch.turn_on
       entity_id: switch.kitchen_light
-    - service: light.turn_on
-      entity_id: light.dining_room_light
+    - service: script.home_light
+      data:
+        entity_id: light.dining_room_light
 
 bedtime:
   sequence:
