Adding in Guest Mode (#5)
* Adding in guest mode switch

* Change preheating icon

* Preheat Loft for Guests automation

* Adding in light profiles

* Change indent

* Amend indent

* Change RGB profiles to HS profiles

* Amending light profiles

* Hall light on if guests are over at night

* Adjust the color temp for night light

* Refactor motion light in bathroom

* Comment condition out for testing

* Change to night light color temperature

* Copy change of logic to toilet light too

* Tweak turning on actions

* Fix to entity id

* Change bathroom light sensitivity

* Adjust loft temperature

* Syntax change

* Final cleanup

--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -68,6 +68,20 @@
   action:
     - service: script.restart_tado
 
+- alias: Heating - Preheat Loft for Guests
+  trigger:
+    platform: time
+    at: "21:00:00"
+  condition:
+    - condition: state
+      entity_id: input_boolean.guest_mode
+      state: "on"
+  action:
+    - service: script.set_thermostat
+      data:
+        entity_id: climate.loft
+        temperature: 18
+
 - alias: Heating - Preheating On
   trigger:
     platform: time
