--- a/integrations/input_boolean.yaml
+++ b/integrations/input_boolean.yaml
@@ -4,8 +4,12 @@ heating:
 
 preheating:
   name: Early start
-  icon: mdi:fire
+  icon: mdi:timer-outline
 
 night_mode:
   name: Night mode
   icon: mdi:weather-night
+
+guest_mode:
+  name: Guest mode
+  icon: mdi:bed
