--- a/scripts/lights.yaml
+++ b/scripts/lights.yaml
@@ -26,3 +26,27 @@ sunset_loft:
       data:
         entity_id: light.loft_light_3
         transition: 900
+
+night_light:
+  sequence:
+    - service: light.turn_on
+      data:
+        entity_id: "{{ entity_id }}"
+        color_temp: 333
+        brightness: 1
+
+home_light:
+  sequence:
+    - service: light.turn_on
+      data:
+        entity_id: "{{ entity_id }}"
+        color_temp: 255
+        brightness: 205
+
+bright_light:
+  sequence:
+    - service: light.turn_on
+      data:
+        entity_id: "{{ entity_id }}"
+        color_temp: 175
+        brightness: 255
