--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -2,6 +2,10 @@
   trigger:
     platform: time
     at: input_datetime.heating_off
+  condition:
+    - condition: state
+      entity_id: group.everyone
+      state: home
   action:
     - service: script.heating_night
 
@@ -26,6 +30,10 @@
   trigger:
     platform: time
     at: input_datetime.morning
+  condition:
+    - condition: state
+      entity_id: group.everyone
+      state: home
   action:
     - service: script.heating_morning
 
