Fix defect around time comparison

--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -106,6 +106,6 @@
       value_template: >
         {% set time = states('input_datetime.heating_on')%}
         {% set now = now().strftime("%H:%M:%S") %}
-        {{ now > time and is_state('input_boolean.preheating', 'on') }}
+        {{ now >= time and is_state('input_boolean.preheating', 'on') }}
   action:
     - service: script.heating_early_morning
