--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -11,22 +11,25 @@ set_thermostat:
       data_template:
         entity_id: "{{ entity_id }}"
         temperature: "{{ temperature }}"
-    - service: system_log.write
+
+increase_temperature:
+  sequence:
+    - condition: template
+      value_template: >
+        {% set set_temperature = state_attr(entity_id, "temperature")%}
+        {{ temperature > set_temperature }}
+    - service: script.set_thermostat
       data:
-        message: "{{ entity_id }} was set to {{ temperature }}"
-        level: warning
+        entity_id: "{{ entity_id }}"
+        temperature: "{{ temperature }}"
 
 heating_early_morning:
   sequence:
-    - service: system_log.write
-      data:
-        message: heating_early_morning was triggered
-        level: warning
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.living_room
         temperature: 20
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.bedroom
         temperature: 19
@@ -36,11 +39,11 @@ heating_early_morning:
 heating_morning:
   sequence:
     - service: script.refresh_morning_timer
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.living_room
         temperature: 20
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.kitchen
         temperature: 19
@@ -89,22 +92,22 @@ heating_away:
 
 heating_close:
   sequence:
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.living_room
         temperature: 20
 
 heating_back:
   sequence:
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.living_room
         temperature: 20
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.kitchen
         temperature: 19
-    - service: script.set_thermostat
+    - service: script.increase_temperature
       data:
         entity_id: climate.bedroom
         temperature: 20
@@ -150,7 +153,7 @@ refresh_morning_timer:
       target:
         entity_id: input_datetime.morning
       data:
-        time: "{{ '07:00' if is_state('binary_sensor.workday_tomorrow', 'on') else '08:00' }}"
+        time: "{{ '07:30' if is_state('binary_sensor.workday_tomorrow', 'on') else '08:30' }}"
 
 refresh_heating_off_timer:
   sequence:
