Update the bedtime sript

--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -56,6 +56,12 @@ bedtime:
 kids_bedtime:
   sequence:
     - service: script.sunset_kids_room
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.white_noises_player_kids_room
+        option: 'Womb Sounds'
+    - service: input_boolean.turn_on
+      entity_id: input_boolean.kids_night_light
 
 bedside_actions:
   sequence:
