--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -61,8 +61,9 @@ kids_bedtime:
         option: 'Womb Sounds'
     - service: script.sunset_kids_room
     - service: media_player.volume_set
-      volume_level: 0.05
-      entity_id: media_player.kids_room_speaker
+      data:
+        volume_level: 0.05
+        entity_id: media_player.kids_room_speaker
     - service: input_boolean.turn_on
       entity_id: input_boolean.kids_night_light
 
