--- a/automations/automations.yaml
+++ b/automations/automations.yaml
@@ -153,20 +153,19 @@
     event_type: xiaomi_aqara.click
     event_data:
       entity_id: binary_sensor.kids_room_button
+      click_type: double
   action:
     - service: script.kids_bedtime
 
-- alias: Home - Select home mode in the morning
+- alias: Home - Disable night lights every morning
   trigger:
     platform: time
     at: "06:00:00"
-  condition:
-    - condition: state
-      entity_id: group.everyone
-      state: home
   action:
     - service: input_boolean.turn_off
-      entity_id: input_boolean.night_mode
+      entity_id:
+        - input_boolean.night_mode
+        - input_boolean.kids_night_light
 
 - alias: Stop music when xbox starts playing
   trigger:
