--- a/scripts/lights.yaml
+++ b/scripts/lights.yaml
@@ -56,6 +56,7 @@ default_light_colors:
     - service: script.home_light
       data:
         entity_id: all
+    - delay: '00:00:02'
     - service: script.bright_light
       data:
         entity_id:
