--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -47,10 +47,10 @@ heating_morning:
       data:
         entity_id: climate.kitchen
         temperature: 19
-    - service: script.increase_temperature
-      data:
-        entity_id: climate.kid_s_room
-        temperature: 19
+    # - service: script.increase_temperature
+    #   data:
+    #     entity_id: climate.kid_s_room
+    #     temperature: 19
     - service: climate.turn_off
       entity_id:
           - climate.bedroom
@@ -107,10 +107,10 @@ heating_back:
       data:
         entity_id: climate.kitchen
         temperature: 19
-    - service: script.increase_temperature
-      data:
-        entity_id: climate.kid_s_room
-        temperature: 19
+    # - service: script.increase_temperature
+    #   data:
+    #     entity_id: climate.kid_s_room
+    #     temperature: 19
 
 heating_bedrooms:
   sequence:
