--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -48,9 +48,9 @@
     from: 'off'
     to: 'on'
   condition:
-    - condition: numeric_state
-      entity_id: sensor.toilet_illumination
-      below: 10
+    - condition: template
+      value_template: >
+        {{ int(states('sensor.toilet_illumination')) <= 10 or states('sun.sun') == 'below_horizon' }}
   action:
     service_template: >
         {% if is_state("input_boolean.night_mode", "on") %} script.night_light
@@ -76,9 +76,9 @@
     from: 'off'
     to: 'on'
   condition:
-    - condition: numeric_state
-      entity_id: sensor.bathroom_illumination
-      below: 10
+    - condition: template
+      value_template: >
+        {{ int(states('sensor.bathroom_illumination')) <= 10 or states('sun.sun') == 'below_horizon' }}
   action:
     service_template: >
         {% if is_state("input_boolean.night_mode", "on") %} script.night_light
