--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -17,7 +17,7 @@ increase_temperature:
     - condition: template
       value_template: >
         {% set set_temperature = state_attr(entity_id, "temperature")%}
-        {{ is_state(entity_id, "off") or float(temperature) > set_temperature }}
+        {{ is_state(entity_id, "off") or temperature > set_temperature }}
     - service: script.set_thermostat
       data:
         entity_id: "{{ entity_id }}"
@@ -124,7 +124,8 @@ heating_bedrooms:
     - service: script.increase_temperature
       data:
         entity_id: climate.loft
-        temperature: input_number.default_loft_temperature
+        # temperature: input_number.default_loft_temperature
+        temperature: "{{ states('input_number.default_loft_temperature') | float }}"
 
 heating_night:
   sequence:
