--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -152,13 +152,18 @@ heating_night:
 
 boost_heating:
   sequence:
-    - service: tado.set_climate_timer
-      target:
-        entity_id: climate.kid_s_room
+    - service: script.increase_temperature
       data:
-        time_period: "00:30:00"
+        entity_id: climate.kid_s_room
         temperature: >
-          {{ state_attr('climate.kid_s_room', 'temperature') + 1 }}
+          {% set temp = state_attr('climate.kid_s_room', 'temperature') %}  
+          {{ temp + 1 }}
+    - delay: '00:05:00'
+    - service: script.increase_temperature
+      data:
+        entity_id: climate.kid_s_room
+        temperature: >
+          {{ temp }}
 
 refresh_early_morning_timer:
   sequence:
