--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -3,7 +3,7 @@ customize:
   person.lubos:
     entity_picture: /local/lubos.png
   person.jana:
-    entity_picture: /local/janca.png=
+    entity_picture: /local/janca.png
 
 customize_domain:
   climate:
